refactor(sale): improve Sale serialization and persistence handling